<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connect!</string>
    <string name="app_id">168845279974310</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create a new account</string>
    <string name="mail">Mail</string>
    <string name="share">Share</string>
    <string name="password">Password</string>
    <string name="nombre_full">Full name</string>
    <string name="confirmation">Confirm your password</string>
    <string name="nextbutton">Next</string>
    <string name="registerbutton">Register</string>
    <string name="logout">Log out</string>
    <string name="settings">Settings</string>
    <string name="codigo_qr">Codigo QR</string>
    <string name="user_not_found">User not found. Please enter details again. </string>
    <string name="invalid_password">The password you entered is not correct. Please try again </string>
    <string name="connection_error">Can\'t connect to server. Try again </string>
    <string name="blank_fields">Fill all the blanks first</string>
    <string name="conectar_facebook">Conectar con Facebook</string>
    <string name="conectar_linkedin">Log in to LinkedIn</string>
    <string name="passwords_no_coinciden">Passwords don\'t match. Please try again. </string>
    <string name="user_exists">Mail already registered. Please try again </string>
    <string name="join_account">Use my Facebook account </string>
    <string name="join_account_linkedin">Use my LinkedIn account </string>
    <string name="linkedin_detected">Your linkedin account is synced!</string>
    <string name="title_activity_log_linked_in">Log in to LinkedIn</string>
    <string name="mail_invalido">Mail not valid. Please try again.</string>
    <string name="password_short">Password should be at least 6 characters long.</string>
    <string name="title_activity_show_info_friend">Friend information</string>
    <string name="linkedInSolicitudEnviada">Request already sent.</string>
    <string name="sync_accounts">Log in to your accounts to sync them with your Connect account</string>
	<string name="add_facebook">Add to Facebook</string>
	<string name="add_linkedin">Add to LinkedIn</string>
	<string name="add_phonebook">Add to phone book</string>
	<string name="confirm_add1">Add</string>
	<string name="confirm_add2">to my phone book?</string>
	<string name="confirm_logout">Are you sure you want to logout?</string>
	<string name="okphonebook">Contact added</string>
	<string name="errphonebook">Sorry, an error occured.</string>
	<string name="user_not_found_share">User not found.</string>
	<string name="nofacebook">No Facebook account to add</string>
	<string name="nolinkedin">No LinkedIn account to add</string>
	<string name="YES">Yes</string>
	<string name="NO">No</string>
	<string name="sign_in_accounts">Sign in with the accounts you want to add to your Connect! profile and then click the register button.</string>
	<string name="title_register">Sign up</string>
	<string name="title_accounts">My accounts</string>
	<string name="title_ready">Ready!</string>
		<string name="new_connection_1">You are now connected with </string>
	<string name="new_connection_2">whose mail is </string>
	<string name="ok">Ok </string>
	
	
	
</resources>
