<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowInfoFriend" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/celeste"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/blanco"
            tools:ignore="HardcodedText,InefficientWeight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="15dp"
        tools:ignore="InefficientWeight" >

        <TextView
            android:id="@+id/friendName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/friendMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:gravity="center" />

        <Button
            android:id="@+id/friendFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/login_selector"
            android:onClick="addToFacebook"
            android:text="@string/add_facebook"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/friendLinkedIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/login_selector"
            android:onClick="addToLinkedIn"
            android:text="@string/add_linkedin"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/add_phonebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/login_selector"
            android:onClick="addphonebook"
            android:text="@string/add_phonebook"
            android:textColor="@color/blanco" />
    </LinearLayout>

</LinearLayout>